src/objects/Run_Scenario_Status_History__c.object
<CustomObject>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Scenario_Count__c</fullName>
        <label>New Scenario Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Scenario_Count__c</fullName>
        <label>Old Scenario Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Scenario_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Run Scenario Date - Used to filter Run Scenario Dates Reporting. Defaulted to created date.</description>
        <inlineHelpText>Run Scenario Date - Used to filter Run Scenario Dates Reporting. Defaulted to created date.</inlineHelpText>
        <label>Run Scenario Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scenario_Ran__c</fullName>
        <label>Scenario Ran</label>
        <referenceTo>RunScenario__c</referenceTo>
        <relationshipLabel>Run Scenario Status History</relationshipLabel>
        <relationshipName>Run_Scenario_Status_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Run Scenario Status History</label>
    <nameField>
        <displayFormat>RS - {0000}</displayFormat>
        <label>Run Scenario Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run Scenario Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>